<resources>
    <string name="app_name">Speed Guess</string>
    <string name="identify_car_str">Identify Car Make</string>
    <string name="hints_str">Hints</string>
    <string name="identify_car_image_str">Identify Car Image</string>
    <string name="advanced_level_str">Advanced Level</string>
    <string name="content_description_ImageView">Image of Car to be Guessed</string>
    <string name="Identify_Btn_Text">Identify</string>
    <string name="select_model_text">Select Model:</string>
    <string name="next_btn_txt">Next</string>
    <string name="guess_letters_text">Guess Letter</string>
    <string name="submit_txt">Submit</string>
    <string name="accepted_chars">abcdefghijklmnopqrstuvwxyz</string>
    <string name="illustration_text">illustration</string>
    <string name="image_1">image 1</string>
    <string name="image_2">image 2</string>
    <string name="image_3">image 3</string>
    <string name="name_text">Name</string>
    <string name="score_text">Score: </string>
    <string name="timer_text">Timer</string>
    <string name="times_up">Times Up</string>
    <string name="times_up_txt">Time\'s Up!</string>
    <string-array name="car_names_array">
        <item>Select Model</item>
        <item>Mercedes</item>
        <item>Tesla</item>
        <item>Ford</item>
    </string-array>
</resources>